--- a/prompt_paper/prompt_contracts_paper.tex
+++ b/prompt_paper/prompt_contracts_paper.tex
@@ -19,6 +19,16 @@
 % Allow emergency stretching for problematic lines
 \setlength{\emergencystretch}{2em}
 
+% Standardize all tables to paragraph width
+\newcommand{\standardtable}[2]{
+  \begin{table}[H]
+  \centering
+  \caption{#1}
+  \footnotesize
+  #2
+  \end{table}
+}
+
 % Custom commands for breaking specific problematic text
 \newcommand{\breakablefunction}[1]{\texttt{\seqsplit{#1}}}
 \newcommand{\breakablepath}[1]{\texttt{\seqsplit{#1}}}
@@ -63,7 +73,7 @@
 }
 
 \lstset{
-  basicstyle=\ttfamily\scriptsize,
+  basicstyle=\ttfamily\footnotesize,
   breaklines=true,
   frame=single,
   numbers=left,
@@ -350,7 +360,7 @@ PCSL uniquely combines formal specification, probabilistic semantics, multi-prov
 \caption{Framework Comparison}
 \label{tab:comparison}
 \footnotesize
-\begin{tabular}{@{}p{2.2cm}cccccc@{}}
+\begin{tabular}{@{}lccccc@{}}
 \toprule
 \textbf{Framework} & \textbf{Contracts} & \textbf{Probabilistic} & \textbf{CI/CD} & \textbf{Semantic} & \textbf{Compliance} \\
 \midrule
@@ -451,7 +461,7 @@ Algorithm~\ref{alg:pipeline} formalizes sampling-enabled execution.
 \begin{algorithm}[t]
 \caption{PCSL Execution with Probabilistic Sampling}
 \label{alg:pipeline}
-\scriptsize
+\footnotesize
 \begin{algorithmic}[1]
 \STATE \textbf{Input:} \( \mathcal{C} = \langle \mathcal{P}, \mathcal{E}, \mathcal{X} \rangle \), \( (N, \text{seed}, A) \); \textbf{Output:} \( \mathcal{R} \)
 \STATE \( \mathcal{R} \leftarrow \emptyset \); \textbf{if} seed \textbf{then} \texttt{set\_seed}(seed)
@@ -495,7 +505,7 @@ Table~\ref{tab:compliance} maps PCSL to ISO 29119 and EU AI Act.
 \caption{Compliance Mapping}
 \label{tab:compliance}
 \footnotesize
-\begin{tabular}{@{}p{2.2cm}p{2.2cm}p{2.2cm}@{}}
+\begin{tabular}{@{}lcc@{}}
 \toprule
 \textbf{PCSL} & \textbf{ISO 29119} & \textbf{EU AI Act} \\
 \midrule
@@ -625,7 +635,7 @@ CI width: 0.12 \(\to\) 0.05 \(\to\) 0.03.
 \centering
 \caption{Sample Size Ablation (Classification Task, bootstrap CI)}
 \label{tab:ablation_n}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lccccc@{}}
 \toprule
 \textbf{N} & \textbf{Val.} & \textbf{CI Width}\(^*\) & \textbf{Var(\(\hat{p}\))} & \textbf{Lat. (ms)} & \textbf{Mult.} \\
@@ -637,7 +647,7 @@ CI width: 0.12 \(\to\) 0.05 \(\to\) 0.03.
 \bottomrule
 \end{tabular}
 \vspace{1mm}
-\scriptsize\(^*\)CI Width = upper bound - lower bound (95\% bootstrap percentile)
+\footnotesize\(^*\)CI Width = upper bound - lower bound (95\% bootstrap percentile)
 \end{table}
 
 \textbf{Aggregation} (Table~\ref{tab:ablation_agg}): Majority (92\%) optimal. 
@@ -647,7 +657,7 @@ All (87\%): safety-critical. Any (97\%): exploratory.
 \centering
 \caption{Aggregation Policy (N=10)}
 \label{tab:ablation_agg}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lcccc@{}}
 \toprule
 \textbf{Policy} & \textbf{Val.} & \textbf{FP} & \textbf{FN} & \textbf{Use Case} \\
@@ -673,7 +683,7 @@ Low variance confirms determinism despite LLM stochasticity.
 \centering
 \caption{Seed Robustness (Classification, N=10, Assist Mode)}
 \label{tab:seed}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lccccccc@{}}
 \toprule
 \textbf{Seed} & \textbf{42} & \textbf{123} & \textbf{456} & \textbf{789} & \textbf{999} & \textbf{Mean} & \textbf{Std}\(^*\) \\
@@ -683,7 +693,7 @@ Repair (\%) & 68 & 71 & 74 & 65 & 69 & 69.4 & 3.1 \\
 \bottomrule
 \end{tabular}
 \vspace{1mm}
-\scriptsize\(^*\)Std = empirical standard deviation across 5 seeds
+\footnotesize\(^*\)Std = empirical standard deviation across 5 seeds
 \end{table}
 
 \subsection{Comparative Benchmarks}
@@ -695,7 +705,7 @@ Setup: PCSL 2 min vs. CheckList 120 min.
 \centering
 \caption{Framework Comparison (N=50 Shared Fixtures)}
 \label{tab:comparative}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lcccccc@{}}
 \toprule
 \textbf{Framework} & \textbf{Prec.} & \textbf{Rec.} & \textbf{F1} & \textbf{Setup (min)} & \textbf{Repro.} & \textbf{CI/CD} \\
@@ -717,7 +727,7 @@ LLM-judge vs. human (100 outputs, 3 raters, MT-Bench scale~\cite{zheng2023judgin
 \centering
 \caption{LLM-Judge vs. Human}
 \label{tab:judge}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lccccc@{}}
 \toprule
 \textbf{Judge} & \textbf{Pearson r} & \textbf{Spearman \( \rho \)} & \textbf{\( \kappa \)} & \textbf{Agree\%} & \textbf{Cost/100} \\
@@ -788,7 +798,7 @@ Mistral & Mixtral 8x7B & 4w & 90.4 & 0.052 & +3.1 & 0.31 \\
 \centering
 \caption{Repair policy impact (520 fixtures). Task accuracy preserved (sem. change 1.2\%).}
 \label{tab:repair_sensitivity}
-\scriptsize
+\footnotesize
 \begin{tabular}{@{}lcccc@{}}
 \toprule
 \textbf{Task} & \textbf{w/o Repair} & \textbf{w/ Repair} & \textbf{$\Delta$} & \textbf{Repair Rate} \\
@@ -870,8 +880,8 @@ Guidance & 90\% (180/200) & 85\% (170/200) & 36.5 & 1,305 $\pm$ 412 & 0.089 & 0.
 \centering
 \caption{Response to Peer-Review}
 \label{tab:review}
-\scriptsize
-\begin{tabular}{@{}p{3.5cm}p{3.5cm}@{}}
+\footnotesize
+\begin{tabular}{@{}lcccc@{}}
 \toprule
 \textbf{Criticism} & \textbf{Addressed By} \\
 \midrule
